# learning-llms-and-genai-for-dev-sec-ops

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
lessons/developer/: 01-simple-openai-llm.ipynb  02-simple-debugging.ipynb  03-simple-openai-chat.ipynb  04-simple-prompt-template.ipynb  05-docloading.ipynb  06-embedding-demo.ipynb  07-splitters.ipynb  08-vectorstore.ipynb  09-qachain-rag.ipynb  09-rag-lcel.ipynb  10-apichain-openapi.ipynb  10-openapi-agent.ipynb  11-agent-with-search-tool.ipynb  11-agent-with-tools.ipynb  12-crewai.ipynb  14-vision.ipynb  zz-openapi-agent.ipynb
lessons/developer/_lessonshelper/: pretty_print_callback_handler.py
lessons/developer/data/: history.md
lessons/operations/: 01-token-counting.ipynb  02-caching-lllm.ipynb  03-caching-embeddings.ipynb  04-local-llm.ipynb  05-local-embeddings.ipynb  06-log-tofile.ipynb  07-parsing-retry.ipynb
lessons/operations/chroma_db/: chroma.sqlite3
lessons/quality/: 01-langsmith-evaluations.ipynb
lessons/security/: 00-owasp-top-llm.md  01-prompt-injection.ipynb  02-prompt-injection-detector-prompt.ipynb  02-prompt-injection-detector-transformer.ipynb  03-prompt-injection-detector-prompt.ipynb  03-prompt-injection-detector-transformer.ipynb  04-self-critique.ipynb  04-toxic-detector-transformer.ipynb  05-toxic-detector-transformer.ipynb  06-kubernetes-trivy-gpt.ipynb  99__todo-nemoguardrails.ipynb
