[tool.poetry]
name = "llms-genai-devsecops-lessons"
version = "0.1.0"
description = "Learning llms and generative ai for Dev,Sec,Ops"
authors = ["Patrick Debois <Patrick.Debois@jedi.be>"]
readme = "README.md"
packages = [{}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
