[tool.poetry]
name = "learning-llms-and-genai-for-dev-sec-ops"
version = "0.2.0"
description = "Learning llms and generative ai for Dev,Sec,Ops"
authors = ["Patrick Debois <Patrick.Debois@jedi.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
